--- a/Other/full.tex
+++ b/Other/full.tex
@@ -116,7 +116,7 @@ Also some crazy characters: \$\&\#\{\}%
 
 \begin{figure}[h!]%
 \centering%
-\includegraphics[width=120px]{c:/Users/Stheven/Documents/Python/kitten.jpg}%
+\includegraphics[width=120px]{C:/Users/Stheven/Documents/Python/Other/kitten.jpg}%
 \caption{Look it's on its back}%
 \end{figure}
 
